test100.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test100
  namespace: test100
  labels:
    app: test100
    tier: web
  annotations:
    magedu.com/created-by: "cluster admin"
spec:
  selector:
    matchLabels:
      app: test100
      tier: web
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: test100
        tier: web
    spec:
      volumes:
      - name: html
        emptyDir: {}
      containers:
      - name: httpd
        image: ikubernetes/myapp:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
