test100-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test100-policy
  namespace: test100
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: test200
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: icmp
      protocol: SCTP
  podSelector:
    matchLabels:
      app: test100
      tier: web
  policyTypes:
  - Ingress
